--- a/src/app/components/modal/agregar-editar-especies/agregar-editar-especie.component.html
+++ b/src/app/components/modal/agregar-editar-especies/agregar-editar-especie.component.html
@@ -1,19 +1,18 @@
-<p-dialog [header]="modalType + ' Especie'" [(visible)]="displayAddEditModal" [modal]="true" [draggable]="false"
+<p-dialog header="{{ modalType }} Especie" [(visible)]="displayAddEditModal" [modal]="true" [draggable]="false"
   [resizable]="false" (onHide)="closeModal()">
   <form [formGroup]="especieForm" class="especie-form">
     <div class="field">
       <label class="block" for="especie">Nombre de especie</label>
-      <input id="especie" class="p-2 rounded-xl border border-gray-500" type="text" pInputText 
-        formControlName="especie" placeholder="Ingrese una especie" />
-        <small class="p-error block" *ngIf="especieForm.controls['especie'].invalid &&
+      <input id="especie" class="p-2 rounded-xl border border-gray-500" type="text" pInputText formControlName="especie"
+        placeholder="Ingrese una especie" />
+      <small class="p-error block" *ngIf="especieForm.controls['especie'].invalid &&
           (especieForm.controls['especie'].dirty || especieForm.controls['especie'].touched)"> Campo requerido *
-    </small>
+      </small>
     </div>
   </form>
   <ng-template pTemplate="footer">
-    <p-button class="bg-gray-100 rounded-xl py-3 px-2 mr-2" (click)="closeModal()" label="Cancelar"
-      styleClass="p-button-text"></p-button>
-    <p-button class="custom-button" (click)="agregarEditarEspecie()" [label]="modalType"
+    <p-button class="cancel-button" (click)="closeModal()" label="Cancelar" styleClass="p-button-text"></p-button>
+    <p-button class="custom-button" (click)="modalEspecie()" [label]="modalType"
       [disabled]="especieForm.invalid"></p-button>
   </ng-template>
 </p-dialog>
