--- a/src/app/components/modal/agregar-editar-lotes/agregar-editar-lote.component.css
+++ b/src/app/components/modal/agregar-editar-lotes/agregar-editar-lote.component.css
@@ -1,61 +1,33 @@
-.card {
-  margin: 0;
-  padding: 0;
-  width: 150vh;
-  height: 100vh;
+/* Aplica el estilo a todos los inputs */
+input {
+  padding: 0.5rem; 
+  border-radius: 0.75rem; 
+  border: 1px solid #6b7280; 
 }
 
-.table {
-  width: 100%;
-  padding: 1rem 1.5rem;
-  font-size: 2rem;
-  font-weight: 600;
-  text-align: center;
-  color: #fafafa;
-  background-color: #2d44f3;
-  border-radius: 5px;
-}
-
+/* Estilos para las opciones (botones) */
 .custom-button {
-  background-color: #036927;
-  border-radius: 0.75rem;
+  background-color: #036927; 
   color: white;
-  padding: 0.5rem 1rem;
-  transition: background-color 0.3s ease, transform 0.3s ease;
+  border-radius: 0.75rem; 
+  padding-top: 0.75rem; 
+  padding-bottom: 0.75rem; 
+  padding-left: 0.5rem; 
+  padding-right: 0.5rem;   
+  transition: background-color 0.3s ease, transform 0.3s ease; /
 }
 
 .custom-button:hover {
-  background-color: #022d11;
-  transform: scale(1.05);
+  background-color: #040456; 
+  transform: scale(1.05); 
 }
 
-.edit {
-  background-color: #b4a21a;
-  border-radius: 0.75rem;
-  color: white;
+.cancel-button {
+  border-radius: 0.75rem; 
   padding: 0.5rem 1rem;
-  transition: background-color 0.3s ease, transform 0.3s ease;
-  margin-right: 1rem; 
 }
 
-.delete {
-  background-color: #ad0c0c;
-  border-radius: 0.75rem;
-  color: white;
-  padding: 0.5rem 1rem;
-  transition: background-color 0.3s ease, transform 0.3s ease;
-  margin-left: 1rem; 
-}
-
-.edit:hover, .delete:hover {
-  background-color: #040456;
-  transform: scale(1.05);
-}
-
-th {
-  text-align: center;
-}
-
-td {
-  text-align: center;
+.cancel-button:hover {
+  background-color: #e2e8f0; 
+  transform: scale(1.05); 
 }
