--- a/src/app/components/modal/agregar-editar-pescas/agregar-editar-pesca.component.css
+++ b/src/app/components/modal/agregar-editar-pescas/agregar-editar-pesca.component.css
@@ -1,32 +1,33 @@
-:host >>> .lote-form .p-component {
-    width: 100%;
-  } 
+/* Aplica el estilo a todos los inputs */
+input {
+  padding: 0.5rem; 
+  border-radius: 0.75rem; 
+  border: 1px solid #6b7280; 
+}
 
+/* Estilos para las opciones (botones) */
+.custom-button {
+  background-color: #036927; 
+  color: white;
+  border-radius: 0.75rem; 
+  padding-top: 0.75rem; 
+  padding-bottom: 0.75rem; 
+  padding-left: 0.5rem; 
+  padding-right: 0.5rem;   
+  transition: background-color 0.3s ease, transform 0.3s ease; /
+}
 
-  .row {
-    display: flex;
-    gap: 10px;
+.custom-button:hover {
+  background-color: #040456; 
+  transform: scale(1.05); 
+}
 
-    .field {
-      width: 100%;
-    }
+.cancel-button {
+  border-radius: 0.75rem; 
+  padding: 0.5rem 1rem;
+}
 
-    .lg{
-      width: 100%;
-    }
-  }
-
-  
-
-  select{
-    border: none;
-    border-radius: 1px ;
-    border-bottom: 1px solid;
-    width: 100%;
-    background: transparent;
-    outline: none;
-    height: 44px;
-    color: #000;
-    font-size: 17px;
-    margin-bottom: 40px;
-  }
+.cancel-button:hover {
+  background-color: #e2e8f0; 
+  transform: scale(1.05); 
+}
