--- a/src/app/components/modal/agregar-editar-proveedores/agregar-editar-proveedor.component.html
+++ b/src/app/components/modal/agregar-editar-proveedores/agregar-editar-proveedor.component.html
@@ -1,6 +1,6 @@
 <p-dialog header="{{ modalType }} Proveedor" [(visible)]="displayAddEditModal" [modal]="true" [draggable]="false"
     [resizable]="false" (onHide)="closeModal()">
-    <form [formGroup]="proveedorForm" class="proveedor-form">
+    <form [formGroup]="proveedorForm" class="form">
         <div class="row">
             <div class="field">
                 <label class="block" for="razonSocial">Razón Social</label>
@@ -73,7 +73,7 @@
                 <div class="field">
                     <label class="block" for="tipoIdentificacionId">Tipo Identificación</label>
                     <select id="tipoIdentificacionId" class="select" formControlName="tipoIdentificacionId">
-                        <option [ngValue]="null" disabled>Seleccionar una Opción</option>
+                        <option [ngValue]="null" disabled>Seleccionar una opción</option>
                         <option *ngFor="let tipo of tipoIdentificacion" [ngValue]="tipo.id">{{ tipo.name }}</option>
                     </select>
                     <small class="p-error block" *ngIf="proveedorForm.controls['tipoIdentificacionId'].invalid &&
@@ -87,7 +87,7 @@
             <div class="field">
                 <label class="block" for="tipoProveedorId">Tipo de Proveedor</label>
                 <select id="tipoProveedorId" class="select" formControlName="tipoProveedorId">
-                    <option [ngValue]="null" disabled>Seleccionar una Opción</option>
+                    <option [ngValue]="null" disabled>Seleccionar una opción</option>
                     <option *ngFor="let tipoPro of tipoProveedor" [ngValue]="tipoPro.id">{{ tipoPro.name }}</option>
                 </select>
                 <small class="p-error block" *ngIf="proveedorForm.controls['tipoProveedorId'].invalid &&
@@ -98,9 +98,8 @@
         </div>
     </form>
     <ng-template pTemplate="footer">
-        <p-button class="bg-gray-100 rounded-xl py-3 px-2 mr-2" (click)="closeModal()" label="Cancel"
-            styleClass="p-button-text"></p-button>
-        <p-button class="custom-button" (click)="agregarEditarProveedor()" label="{{ modalType }}"
+        <p-button class="cancel-button" (click)="closeModal()" label="Cancel" styleClass="p-button-text"></p-button>
+        <p-button class="custom-button" (click)="modalProveedor()" label="{{ modalType }}"
             [disabled]="proveedorForm.invalid"></p-button>
     </ng-template>
 </p-dialog>
