--- a/src/app/components/modal/agregar-editar-usuarios/agregar-editar-usuario.component.html
+++ b/src/app/components/modal/agregar-editar-usuarios/agregar-editar-usuario.component.html
@@ -1,6 +1,6 @@
 <p-dialog header="{{ modalType }} Usuario" [(visible)]="displayAddEditModal" [modal]="true" [draggable]="false"
   [resizable]="false" (onHide)="closeModal()">
-  <form [formGroup]="usuarioForm" class="usuario-form">
+  <form [formGroup]="usuarioForm" class="form">
     <div class="row">
       <div class="field">
         <label class="block" for="nombre">Nombre</label>
@@ -68,7 +68,7 @@
       <div class="field">
         <label class="block" for="rolId">Rol</label>
         <select id="rolId" class="select" name="rolId" type="text" formControlName="rolId">
-          <option [ngValue]="null" disabled>Seleccionar una Opción</option>
+          <option [ngValue]="null" disabled>Seleccionar una opción</option>
           <option *ngFor="let rol of rol" [value]="rol.id"> {{ rol.name }}</option>
         </select>
         <small class="p-error block" *ngIf="usuarioForm.controls['rolId'].invalid &&
@@ -79,9 +79,8 @@
     </div>
   </form>
   <ng-template pTemplate="footer">
-    <p-button class="bg-gray-100 rounded-xl py-3 px-2 mr-2" (click)="closeModal()" label="Cancel"
-      styleClass="p-button-text"></p-button>
-    <p-button class="custom-button" (click)="agregarEditarUsuario()" label="{{ modalType }}"
+    <p-button class="cancel-button" (click)="closeModal()" label="Cancel" styleClass="p-button-text"></p-button>
+    <p-button class="custom-button" (click)="modalUsuario()" label="{{ modalType }}"
       [disabled]="usuarioForm.invalid"></p-button>
   </ng-template>
 </p-dialog>
