--- a/src/app/pages/especies/especie.component.html
+++ b/src/app/pages/especies/especie.component.html
@@ -3,7 +3,7 @@
     <div class="table">Especies</div>
   </div>
 
-  <p-table class="border-3 border-gray-400" [value]="especie" [paginator]="true" [rows]="10"
+  <p-table class="p-table" [value]="especie" [paginator]="true" [rows]="10"
     [rowsPerPageOptions]="[10, 20, 30]">
     <ng-template pTemplate="caption">
       <div class="header-container">
@@ -20,18 +20,18 @@
 
     <ng-template pTemplate="header">
       <tr class="border-2 border-gray-300 w-6/12">
-        <th class="border-2">N°</th>
-        <th class="border-2">Nombre de Especie</th>
-        <th class="border-2">Fecha de Registro</th>
-        <th class="border-2">Opciones</th>
+        <th>N°</th>
+        <th>Fecha de Registro</th>
+        <th>Nombre de Especie</th>
+        <th>Opciones</th>
       </tr>
     </ng-template>
     <ng-template pTemplate="body" let-rowIndex="rowIndex" let-especie>
-      <tr class="hover:bg-gray-300 cursor-pointer duration-300">
-        <td class="border-2">{{ rowIndex + 1 }}</td>
-        <td class="border-2">{{ especie.especie }}</td>
-        <td class="border-2">{{ especie.fechaCreacion }}</td>
-        <td class="border-2">
+      <tr class="items">
+        <td>{{ rowIndex + 1 }}</td>
+        <td>{{ especie.fechaCreacion }}</td>
+        <td>{{ especie.especie }}</td>
+        <td>
           <div class="option">
           <button pButton icon="pi pi-pencil" class="edit" (click)="showEdit(especie.id)"></button>
           <button pButton icon="pi pi-trash" class="delete" (click)="eliminarEspecie(especie.id)"></button>
@@ -42,7 +42,7 @@
   </p-table>
 
   <app-agregar-editar-especie *ngIf="displayAddEditModal" [displayAddEditModal]="displayAddEditModal"
-    [selectedEspecie]="selectedEspecie" (clickClose)="hideAddModal($event)"
+    [especieSeleccionada]="especieSeleccionada" (clickClose)="hideAddModal($event)"
     (clickAddEdit)="agregarEditarEspecie($event)"></app-agregar-editar-especie>
   <p-confirmDialog header="Delete"></p-confirmDialog>
   <p-toast position="bottom-right"></p-toast>
