--- a/src/app/pages/lotes/lote.component.html
+++ b/src/app/pages/lotes/lote.component.html
@@ -1,9 +1,10 @@
+<div><a [routerLink] ="['/pesca']">Pesca de peces</a>        
+<div><a [routerLink] ="['/mortalidad']">Mortalidad de peces</a>        
 <div class="card">
     <div class="justify-content-between">
         <div class="table">Lote</div>
     </div>
-
-    <p-table class="border-3 border-gray-400" [value]="lote" [paginator]="true" [rows]="10"
+    <p-table class="p-table" [value]="lote" [paginator]="true" [rows]="10"
         [rowsPerPageOptions]="[10, 20, 30]">
         <ng-template pTemplate="caption">
             <div class="header-container">
@@ -19,30 +20,30 @@
           </ng-template>
         <ng-template pTemplate="header">
             <tr class="border-2 border-gray-300 w-6/12">
-                <th class="border-2">N°</th>
-                <th class="border-2">Nombre Lote</th>
-                <th class="border-2">Fecha de Siembra</th>
-                <th class="border-2">Días Cultivados</th>
-                <th class="border-2">Peces Iniciales</th>
-                <th class="border-2">Número Peces</th>
-                <th class="border-2">Especie</th>
-                <th class="border-2">Unidad Productiva</th>
-                <th class="border-2">Proveedor</th>
-                <th class="border-2">Opciones</th>
+                <th>N°</th>
+                <th>Nombre Lote</th>
+                <th>Fecha de Siembra</th>
+                <th>Días Cultivados</th>
+                <th>Peces Iniciales</th>
+                <th>Número Peces</th>
+                <th>Especie</th>
+                <th>Unidad Productiva</th>
+                <th>Proveedor</th>
+                <th>Opciones</th>
             </tr>
         </ng-template>
         <ng-template pTemplate="body" let-rowIndex="rowIndex" let-lote>
-            <tr class="hover:bg-gray-300 cursor-pointer duration-300">
-                <td class="border-2">{{ rowIndex + 1 }}</td>
-                <td class="border-2">{{ lote.lote }}</td>
-                <td class="border-2">{{ lote.fechaSiembra }}</td>
-                <td class="border-2">{{ lote.diasCultivados }}</td>
-                <td class="border-2">{{ lote.pecesIniciales }}</td>
-                <td class="border-2">{{ lote.numeroPeces }}</td>
-                <td class="border-2">{{ lote.especieEspecie }}</td>
-                <td class="border-2">{{ lote.unidadProductivaUnidadP }}</td>
-                <td class="border-2">{{ lote.proveedorRazonSocial }}</td>
-                <td class="border-2">
+            <tr class="items">
+                <td>{{ rowIndex + 1 }}</td>
+                <td>{{ lote.lote }}</td>
+                <td>{{ lote.fechaSiembra }}</td>
+                <td>{{ lote.diasCultivados }}</td>
+                <td>{{ lote.pecesIniciales }}</td>
+                <td>{{ lote.numeroPeces }}</td>
+                <td>{{ lote.especieEspecie }}</td>
+                <td>{{ lote.unidadProductivaUnidadP }}</td>
+                <td>{{ lote.proveedorRazonSocial }}</td>
+                <td>
                     <div class="option">
                         <button pButton icon="pi pi-pencil" class="edit" (click)="showEdit(lote.id)"></button>
                         <button pButton icon="pi pi-trash" class="delete" (click)="eliminarLote(lote.id)"></button>
@@ -51,10 +52,9 @@
             </tr>
         </ng-template>
     </p-table>
-
     <app-agregar-editar-lote *ngIf="displayAddEditModal" [displayAddEditModal]="displayAddEditModal"
-        [selectedLote]="selectedLote" (clickClose)="hideAddModal($event)"
-        (clickAddEdit)="AgregarEditarLote($event)"></app-agregar-editar-lote>
+        [loteSeleccionado]="loteSeleccionado" (clickClose)="hideAddModal($event)"
+        (clickAddEdit)="agregarEditarLote($event)"></app-agregar-editar-lote>
     <p-confirmDialog header="Delete"></p-confirmDialog>
     <p-toast position="bottom-right"></p-toast>
 </div>
