--- a/src/app/pages/mortalidad/mortalidad.component.html
+++ b/src/app/pages/mortalidad/mortalidad.component.html
@@ -1,41 +1,51 @@
+<div><a [routerLink] ="['/lote']">Volver a Lotes</a>   
 <div class="card">
     <div class="justify-content-between">
-        <div class="h1 bg-gray-500 border-3 border-gray-400">Mortalidad</div>
+        <div class="table">Mortalidad</div>
     </div>
-
-    <p-table [value]="mortalidads" [paginator]="true" [rows]="5" [rowsPerPageOptions]="[5, 10, 15 ]">
+    <p-table class="p-table" [value]="mortalidad" [paginator]="true" [rows]="10"
+        [rowsPerPageOptions]="[10, 20, 30]">        
         <ng-template pTemplate="caption">
-           <p-button class="bg-[#EC6708] rounded-xl text-white py-2 px-2"  label="Registrar" (click)="showAddModal()"></p-button>
+            <div class="header-container">
+                <div class="search-container">
+                  <span class="search">
+                    <i class="pi pi-search"></i>
+                  </span>
+                  <input type="text" pInputText placeholder="Buscar mortalidades" [(ngModel)]="filtro"
+                    (input)="onFiltroChange($event)" />
+                </div>
+            <p-button class="custom-button" label="Registrar una mortalidad" (click)="showAddModal()"></p-button>
+            </div>
         </ng-template>
         <ng-template pTemplate="header">
             <tr>
                 <th>N°</th>
-                <th>Animales Muertos</th>                
+                <th>Fecha de muerte</th>
+                <th>Animales muertos</th>                
                 <th>Observaciones</th>
                 <th>Lote</th>                
                 <th>Opciones</th>
             </tr>
         </ng-template>
         <ng-template pTemplate="body" let-mortalidad let-rowIndex="rowIndex">
-            <tr>
+            <tr class="items">
                 <td>{{rowIndex + 1}}</td>
-                <td>{{ mortalidad.animalesMuertos }}</td>
+                <td>{{ mortalidad.fechaCreacion }}</td>
+                <td>{{ mortalidad.pecesMuertos }}</td>
                 <td>{{ mortalidad.observacion }}</td>
-                <td>{{ mortalidad.lote.nombreLote }}</td>
-                
+                <td>{{ mortalidad.loteLote }}</td>
                 <td>
-                    <button pButton icon="pi pi-pencil" class="p-button-rounded p-button-success mr-2"
-                        (click)="showEdit(mortalidad.id)"></button>
-                    <button pButton icon="pi pi-trash" class="p-button-rounded p-button-danger"
-                        (click)="eliminar(mortalidad.id)"></button>
+                    <div class="option">
+                        <button pButton icon="pi pi-pencil" class="edit" (click)="showEdit(mortalidad.id)"></button>
+                        <button pButton icon="pi pi-trash" class="delete" (click)="eliminar(mortalidad.id)"></button>
+                    </div>
                 </td>
             </tr>
         </ng-template>
     </p-table>
-
-    <app-add-edit-mortalidad *ngIf="displayAddEditModal" [displayAddEditModal]="displayAddEditModal"
-        [selectedMortalidad]="selectedMortalidad" (clickClose)="hideAddModal($event)"
-        (clickAddEdit)="guardaroEditarMortalidadList($event)"></app-add-edit-mortalidad>
+    <app-agregar-editar-mortalidad *ngIf="displayAddEditModal" [displayAddEditModal]="displayAddEditModal"
+        [mortalidadSeleccionada]="mortalidadSeleccionada" (clickClose)="hideAddModal($event)"
+        (clickAddEdit)="agregarEditarMortalidad($event)"></app-agregar-editar-mortalidad>
     <p-confirmDialog header="Delete"></p-confirmDialog>
     <p-toast position="bottom-right"></p-toast>
 </div>
