--- a/src/app/pages/pesca/pesca.component.html
+++ b/src/app/pages/pesca/pesca.component.html
@@ -1,39 +1,51 @@
+<div><a [routerLink] ="['/lote']">Volver a Lotes</a>   
 <div class="card">
     <div class="justify-content-between">
-        <div class="h1 bg-gray-500 border-3 border-gray-400">Pesca</div>
+        <div class="table">Pesca</div>
     </div>
-
-    <p-table [value]="pescas" [paginator]="true" [rows]="5" [rowsPerPageOptions]="[5, 10, 15 ]">
+    <p-table class="p-table" [value]="pesca" [paginator]="true" [rows]="10"
+        [rowsPerPageOptions]="[10, 20, 30]">        
         <ng-template pTemplate="caption">
-            <p-button class="bg-[#EC6708] rounded-xl text-white py-2 px-2"  label="Registrar" (click)="showAddModal()"></p-button>
+            <div class="header-container">
+                <div class="search-container">
+                  <span class="search">
+                    <i class="pi pi-search"></i>
+                  </span>
+                  <input type="text" pInputText placeholder="Buscar pescas" [(ngModel)]="filtro"
+                    (input)="onFiltroChange($event)" />
+                </div>
+            <p-button class="custom-button" label="Registrar una pesca" (click)="showAddModal()"></p-button>
+            </div>
         </ng-template>
         <ng-template pTemplate="header">
             <tr>
                 <th>N°</th>
-                <th>Animales Pescados</th>
-                <th>Peso Promedio</th>
+                <th>Fecha de pesca</th>
+                <th>Animales pescados</th>
+                <th>Peso promedio</th>
                 <th>Lote</th>
                 <th>Opciones</th>
             </tr>
         </ng-template>
         <ng-template pTemplate="body" let-rowIndex="rowIndex" let-pesca>
-            <tr>
-                <td>{{rowIndex + 1}}</td>
-                <td>{{pesca.animalesPescados }}</td>
-                <td>{{pesca.pesoPromedio }} Lb</td>
-                <td>{{pesca.lote.nombreLote }}</td>
+            <tr class="items">
+                <td>{{ rowIndex + 1 }}</td>
+                <td>{{ pesca.fechaCreacion }}</td>
+                <td>{{ pesca.pecesPescados }}</td>
+                <td>{{ pesca.pesoPromedio }} Lb</td>
+                <td>{{ pesca.loteLote }}</td>
                 <td>
-                    <button pButton icon="pi pi-pencil" class="p-button-rounded p-button-success mr-2"
-                        (click)="showEdit(pesca.id)"></button>
-                    <button pButton icon="pi pi-trash" class="p-button-rounded p-button-danger"
-                        (click)="eliminar(pesca.id)"></button>
+                    <div class="option">
+                        <button pButton icon="pi pi-pencil" class="edit" (click)="showEdit(pesca.id)"></button>
+                        <button pButton icon="pi pi-trash" class="delete" (click)="eliminarPesca(pesca.id)"></button>
+                    </div>
                 </td>
             </tr>
         </ng-template>
     </p-table>
-    <app-add-edit-pesca *ngIf="displayAddEditModal" [displayAddEditModal]="displayAddEditModal"
-        [selectedPesca]="selectedPesca" (clickClose)="hideAddModal($event)"
-        (clickAddEdit)="guardaroEditarPescaList($event)"></app-add-edit-pesca>
+    <app-agregar-editar-pesca *ngIf="displayAddEditModal" [displayAddEditModal]="displayAddEditModal"
+        [pescaSeleccionada]="pescaSeleccionada" (clickClose)="hideAddModal($event)"
+        (clickAddEdit)="agregarEditarPesca($event)"></app-agregar-editar-pesca>
     <p-confirmDialog header="Delete"></p-confirmDialog>
     <p-toast position="bottom-right"></p-toast>
 </div>
