--- a/src/app/pages/proveedores/proveedor.component.html
+++ b/src/app/pages/proveedores/proveedor.component.html
@@ -2,8 +2,7 @@
   <div class="justify-content-between">
     <div class="table">Proveedores</div>
   </div>
-
-  <p-table [value]="proveedor" [paginator]="true" [rows]="10" [rowsPerPageOptions]="[10, 20, 30]">
+  <p-table class="p-table" [value]="proveedor" [paginator]="true" [rows]="10" [rowsPerPageOptions]="[10, 20, 30]">
     <ng-template pTemplate="caption">
       <div class="header-container">
         <div class="search-container">
@@ -16,35 +15,34 @@
         <p-button class="custom-button" label="Registrar un proveedor" (click)="showAddModal()"></p-button>
       </div>
     </ng-template>
-
     <ng-template pTemplate="header">
       <tr class="border-2 border-gray-300 w-6/12">
-        <th class="border-2">N°</th>
-        <th class="border-2">Razón Social</th>
-        <th class="border-2">Nombre</th>
-        <th class="border-2">Apellido</th>
-        <th class="border-2">Correo</th>
-        <th class="border-2">Teléfono</th>
-        <th class="border-2">Dirección</th>
-        <th class="border-2">Número de Identificacion</th>
-        <th class="border-2">Tipo de Identificacion</th>
-        <th class="border-2">Tipo de Proveedor</th>
-        <th class="border-2">Opciones</th>
+        <th>N°</th>
+        <th>Razón Social</th>
+        <th>Nombre</th>
+        <th>Apellido</th>
+        <th>Correo</th>
+        <th>Teléfono</th>
+        <th>Dirección</th>
+        <th>Número de Identificacion</th>
+        <th>Tipo de Identificacion</th>
+        <th>Tipo de Proveedor</th>
+        <th>Opciones</th>
       </tr>
     </ng-template>
     <ng-template pTemplate="body" let-rowIndex="rowIndex" let-proveedor>
-      <tr class="hover:bg-gray-300 cursor-pointer duration-300">
-        <td class="border-2">{{ rowIndex + 1 }}</td>
-        <td class="border-2">{{ proveedor.razonSocial }}</td>
-        <td class="border-2">{{ proveedor.nombre }}</td>
-        <td class="border-2">{{ proveedor.apellido }}</td>
-        <td class="border-2">{{ proveedor.email }}</td>
-        <td class="border-2">{{ proveedor.telefono }}</td>
-        <td class="border-2">{{ proveedor.direccion }}</td>
-        <td class="border-2">{{ proveedor.numeroIdentificacion }}</td>
-        <td class="border-2">{{ proveedor.tipoIdentificacionName }}</td>
-        <td class="border-2">{{ proveedor.tipoProveedorName }}</td>
-        <td class="border-2">
+      <tr class="items">
+        <td>{{ rowIndex + 1 }}</td>
+        <td>{{ proveedor.razonSocial }}</td>
+        <td>{{ proveedor.nombre }}</td>
+        <td>{{ proveedor.apellido }}</td>
+        <td>{{ proveedor.email }}</td>
+        <td>{{ proveedor.telefono }}</td>
+        <td>{{ proveedor.direccion }}</td>
+        <td>{{ proveedor.numeroIdentificacion }}</td>
+        <td>{{ proveedor.tipoIdentificacionName }}</td>
+        <td>{{ proveedor.tipoProveedorName }}</td>
+        <td>
           <div class="option">
             <button pButton icon="pi pi-pencil" class="edit" (click)="showEdit(proveedor.id)"></button>
             <button pButton icon="pi pi-trash" class="delete" (click)="eliminarProveedor(proveedor.id)"></button>
@@ -53,9 +51,8 @@
       </tr>
     </ng-template>
   </p-table>
-
   <app-agregar-editar-proveedor *ngIf="displayAddEditModal" [displayAddEditModal]="displayAddEditModal"
-    [selectedProveedor]="selectedProveedor" (clickClose)="hideAddModal($event)"
+    [proveedorSeleccionado]="proveedorSeleccionado" (clickClose)="hideAddModal($event)"
     (clickAddEdit)="agregarEditarProveedor($event)"></app-agregar-editar-proveedor>
   <p-confirmDialog header="Delete"></p-confirmDialog>
   <p-toast position="bottom-right"></p-toast>
